--- a/main.html
+++ b/main.html
@@ -6,6 +6,10 @@
 </head>
 <body>
 	<canvas id="canvas"></canvas>
+	<script type="text/javascript" src="Entity.js"></script>
+	<script type="text/javascript" src="Button.js"></script>
+	<script type="text/javascript" src="Panel.js"></script>
+	<script type="text/javascript" src="EntityManager.js"></script>
 	<script type="text/javascript" src="Canvas.js"></script>
 	<script type="text/javascript" src="Main.js"></script>
 </body>
