--- a/main.html
+++ b/main.html
@@ -3,14 +3,21 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="style.css">
+
+	<script type="text/javascript" src="src/CBaseVector.js"></script>
+	<script type="text/javascript" src="src/CVector.js"></script>
+	<script type="text/javascript" src="src/CVector2.js"></script>
+	<script type="text/javascript" src="src/CVector3.js"></script>
+	<script type="text/javascript" src="src/CVector4.js"></script>
+
+	<script type="text/javascript" src="src/Gui.js"></script>
+	
+	<script type="text/javascript" src="src/CBasePanel.js"></script>
+	<script type="text/javascript" src="src/CPanel.js"></script>
+	<script type="text/javascript" src="src/CNavPanel.js"></script>
+	<script type="text/javascript" src="src/CButton.js"></script>
+	<script type="text/javascript" src="src/Main.js"></script>
 </head>
 <body>
-	<canvas id="canvas"></canvas>
-	<script type="text/javascript" src="Entity.js"></script>
-	<script type="text/javascript" src="Button.js"></script>
-	<script type="text/javascript" src="Panel.js"></script>
-	<script type="text/javascript" src="EntityManager.js"></script>
-	<script type="text/javascript" src="Canvas.js"></script>
-	<script type="text/javascript" src="Main.js"></script>
 </body>
 </html>
